--- a/api_mashup.html
+++ b/api_mashup.html
@@ -6,8 +6,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/css/materialize.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="http://sulley.cah.ucf.edu/~ti153451/DIG4503/assignment3/css/materialize.css">
-  <link rel="stylesheet" href="http://sulley.cah.ucf.edu/~ti153451/DIG4503/assignment3/css/style.css">
+  <link rel="stylesheet" href="https://lovenlaughs.github.io/api_mashup/css/materialize.css">
+  <link rel="stylesheet" href="https://lovenlaughs.github.io/api_mashup/css/style.css">
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
@@ -55,7 +55,7 @@
   <ul id = "eventbrite" class="collapsible popout" data-collapsible="accordion">
     <li class = "event">
       <div class="collapsible-header">
-		<img class="activator" src="http://sulley.cah.ucf.edu/~ti153451/DIG4503/assignment3/images/african_dance.jpg" alt = "openmic" width = "250" height = "150">
+		<img class="activator" src="https://lovenlaughs.github.io/api_mashup/images/african_dance.jpg" alt = "openmic" width = "250" height = "150">
 			<div id = "results"></div>
 	  </div>
       <div class="collapsible-body">
