--- a/api_mashup.html
+++ b/api_mashup.html
@@ -66,7 +66,7 @@
     </li>
     <li class = "event">
       <div class="collapsible-header">
-		 <img class="activator" src="http://sulley.cah.ucf.edu/~ti153451/DIG4503/assignment3/images/broadway.png" alt = "broadway" width = "250" height = "150">
+		 <img class="activator" src="https://lovenlaughs.github.io/api_mashup/images/broadway.png" alt = "broadway" width = "250" height = "150">
 			<div id = "results3"></div>
 	  </div>
       <div class="collapsible-body">
@@ -77,7 +77,7 @@
     </li>
     <li class = "event">
       <div class="collapsible-header">
-		<img class="activator" src="http://sulley.cah.ucf.edu/~ti153451/DIG4503/assignment3/images/merging_artists.jpg" alt = "artists" width = "250" height = "150">
+		<img class="activator" src="https://lovenlaughs.github.io/api_mashup/images/merging_artists.jpg" alt = "artists" width = "250" height = "150">
 		<div id = "results5"></div>
 	  </div>
       <div class="collapsible-body">
@@ -91,7 +91,7 @@
   <ul id = "eventbrite2" class="collapsible popout" data-collapsible="accordion">
     <li class = "event2">
       <div class="collapsible-header">
-		<img class="activator" src="http://sulley.cah.ucf.edu/~ti153451/DIG4503/assignment3/images/comparative_drama.jpg" alt = "openmic" width = "250" height = "150">
+		<img class="activator" src="https://lovenlaughs.github.io/api_mashup/images/comparative_drama.jpg" alt = "openmic" width = "250" height = "150">
 			<div id = "results7"></div>
 	  </div>
       <div class="collapsible-body">
@@ -102,7 +102,7 @@
     </li>
     <li class = "event2">
       <div class="collapsible-header">
-		 <img class="activator" src="http://sulley.cah.ucf.edu/~ti153451/DIG4503/assignment3/images/stage_play.jpg" alt = "broadway" width = "250" height = "150">
+		 <img class="activator" src="https://lovenlaughs.github.io/api_mashup/images/stage_play.jpg" alt = "broadway" width = "250" height = "150">
 			<div id = "results9"></div>
 	  </div>
       <div class="collapsible-body">
@@ -113,7 +113,7 @@
     </li>
     <li class = "event2">
       <div class="collapsible-header">
-		<img class="activator" src="http://sulley.cah.ucf.edu/~ti153451/DIG4503/assignment3/images/calligraphy.png" alt = "artists" width = "250" height = "150">
+		<img class="activator" src="https://lovenlaughs.github.io/api_mashup/images/calligraphy.png" alt = "artists" width = "250" height = "150">
 		<div id = "results11"></div>
 	  </div>
       <div class="collapsible-body">
@@ -601,8 +601,8 @@ var x = setInterval(function() {
 </script>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js" type="text/javascript"></script>
-<script type="text/javascript" src="http://sulley.cah.ucf.edu/~ti153451/DIG4503/assignment3/js/jquery.gridalicious.min.js"></script>
-<script type="text/javascript" src="http://sulley.cah.ucf.edu/~ti153451/DIG4503/assignment3/js/jquery.jstwitter.js"></script>
+<script type="text/javascript" src="https://lovenlaughs.github.io/api_mashup/js/jquery.gridalicious.min.js"></script>
+<script type="text/javascript" src="https://lovenlaughs.github.io/api_mashup/js/jquery.jstwitter.js"></script>
 <script type="text/javascript">
 $(function () {
     // start jqtweet!
