--- a/api_mashup.html
+++ b/api_mashup.html
@@ -85,6 +85,11 @@
 		<div id="results6"></div></a>
 		Share <a href="http://twitter.com/intent/tweet?text=Merging Artists: The Movement http://bit.ly/2ooFDkW @eventbrite" onclick="window.open(this.href, 'twitterwindow','left=20,top=20,width=600,height=300,toolbar=0,resizable=1'); return false;"><i class="fa fa-twitter" style="font-size:24px"></i></a>
 	  </div>
+	      <div class="collapsible-body">
+	  <a href = "#" class = "link"><p class = "name">Merging, Artists, Movement, Abstract, Showcase</p>
+		<div id="results6"></div></a>
+		Share <a href="http://twitter.com/intent/tweet?text=Merging Artists: The Movement http://bit.ly/2ooFDkW @eventbrite" onclick="window.open(this.href, 'twitterwindow','left=20,top=20,width=600,height=300,toolbar=0,resizable=1'); return false;"><i class="fa fa-twitter" style="font-size:24px"></i></a>
+	  </div>
     </li>
   </ul>
   
