--- a/api_mashup.html
+++ b/api_mashup.html
@@ -85,7 +85,13 @@
 		<div id="results6"></div></a>
 		Share <a href="http://twitter.com/intent/tweet?text=Merging Artists: The Movement http://bit.ly/2ooFDkW @eventbrite" onclick="window.open(this.href, 'twitterwindow','left=20,top=20,width=600,height=300,toolbar=0,resizable=1'); return false;"><i class="fa fa-twitter" style="font-size:24px"></i></a>
 	  </div>
-	      <div class="collapsible-body">
+    </li>
+	  <li class = "event">
+      <div class="collapsible-header">
+		<img class="activator" src="https://lovenlaughs.github.io/api_mashup/images/merging_artists.jpg" alt = "artists" width = "250" height = "150">
+		<div id = "results5"></div>
+	  </div>
+      <div class="collapsible-body">
 	  <a href = "#" class = "link"><p class = "name">Merging, Artists, Movement, Abstract, Showcase</p>
 		<div id="results6"></div></a>
 		Share <a href="http://twitter.com/intent/tweet?text=Merging Artists: The Movement http://bit.ly/2ooFDkW @eventbrite" onclick="window.open(this.href, 'twitterwindow','left=20,top=20,width=600,height=300,toolbar=0,resizable=1'); return false;"><i class="fa fa-twitter" style="font-size:24px"></i></a>
