--- a/api_mashup.html
+++ b/api_mashup.html
@@ -20,7 +20,7 @@
   
 <h2 class="brand-logo center"> Top Events in Orlando </h2>
 <div class="brand-logo center"><input type="text" id="search" onkeyup="myFunction()" placeholder="Search for events" title="Type in event name"></div>
-<div class="brand-logo center"><h3>Biggest Event (Merging Artists: The Movement) in </h3> <p id="timer"></p></div>
+<div class="brand-logo center"><h3>Biggest Event (Dance Revolution) in </h3> <p id="timer"></p></div>
 <!--<div class="col s12 m7">
     <div class="card horizontal">
       <div class="card-image">
