--- a/api_mashup.html
+++ b/api_mashup.html
@@ -358,7 +358,6 @@
       </div>
 </div>
   
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/js/materialize.min.js"></script>
 <script>
@@ -601,7 +600,7 @@ var x = setInterval(function() {
 
 </script>
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js" type="text/javascript"></script>
+<!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js" type="text/javascript"></script>-->
 <script type="text/javascript" src="https://lovenlaughs.github.io/api_mashup/js/jquery.gridalicious.min.js"></script>
 <script type="text/javascript" src="https://lovenlaughs.github.io/api_mashup/js/jquery.jstwitter.js"></script>
 <script type="text/javascript">
