--- a/grabtweets.html
+++ b/grabtweets.html
@@ -2,7 +2,7 @@
 
 //We use already made Twitter OAuth library
 //https://github.com/mynetx/codebird-php
-require_once ('codebird.php');
+require_once ('https://lovenlaughs.github.io/api_mashup/codebird.html');
 
 //Twitter OAuth Settings, enter your settings here:
 $CONSUMER_KEY = 'hIqlMSXFpAqAqrx48TFYIOH8N';
