--- a/api_mashup.html
+++ b/api_mashup.html
@@ -325,7 +325,7 @@
 		<div id="places3"></div>
 	</div>
 	
-	<a class="waves-effect waves-light btn" id = "reviews">Reviews</a>
+	<!--<a class="waves-effect waves-light btn" id = "reviews">Reviews</a>
 	
 <h4> Jeremiah's Italian Ice </h4>
  <div class="row">
@@ -356,7 +356,7 @@
           </div>
         </div>
       </div>
-</div>
+</div>-->
   
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/js/materialize.min.js"></script>
